src/test/ui/generic-associated-types/issue-91762.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-91762.rs:25:15
   |
LL |         ret = <Self::Base as Functor>::fmap(arg);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for type parameter `T` declared on the associated function `fmap`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
